DAT-3626, move pointer events: none to main ember app wrapper to fix scrolling issue on firefox

--- a/front/main/app/styles/layout/_article-preview.scss
+++ b/front/main/app/styles/layout/_article-preview.scss
@@ -1,5 +1,7 @@
 .article-preview {
-	pointer-events: none;
+	.ember-container {
+		pointer-events: none;
+	}
 
 	.page-wrapper {
 		margin-top: 20px;
